# nts1mkii-rust-wave

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain
.cargo/: config
.github/workflows/: build-release.yml  build.yml
components/logue_bind/: CMakeLists.txt  Cargo.toml  build.rs
components/logue_bind/script/: louge-sdk-remove-inline.patch
components/logue_bind/src/: lib.rs
components/logue_sdk_v2rs/: CMakeLists.txt  Cargo.toml  build.rs
components/logue_sdk_v2rs/script/: cmsis_gcc-for-bindgen-clang.patch  louge-sdk-remove-inline-patch.sh
components/logue_sdk_v2rs/src/: bindings_libnts1mkii.c  bindings_libnts1mkii.rs  lib.rs  macros.rs
components/osc_dummy/: Cargo.toml
components/osc_dummy/src/: dummy.rs  header.rs  lib.rs
components/osc_table32/: Cargo.toml
components/osc_table32/src/: bss.rs  header.rs  lib.rs  table32.rs
components/osc_waves/: Cargo.toml
components/osc_waves/src/: header.rs  lib.rs  waves.rs
docs/origin/: waves.dmp  waves.elf  waves.list  waves.make.txt  waves.map  waves.nts1mkiiunit  waves.nts1mkiiunit.readelf.txt  waves.objdump.txt  waves.readelf.txt
ld/: rules.ld
script/: louge-sdk-remove-inline-patch.sh  rules.ld
src/: bindings_libnts1mkii.c  bindings_libnts1mkii.h  bindings_libnts1mkii.rs  header.rs  lib.rs  libm_sqrtf.rs  util.rs  waves.rs
xtask/: Cargo.toml
xtask/src/: build.rs  main.rs
